--- a/juvix.yaml
+++ b/juvix.yaml
@@ -1,4 +1,7 @@
 dependencies:
-- deps/stdlib/
+- git:
+    url: https://github.com/anoma/juvix-stdlib
+    ref: 4facf14d9b2d06b81ce1be1882aa9050f768cb45
+    name: stdlib
 name: test
-version: 0.5.2
+version: 0.6.0
